Enviando arquivos oficias do projeto
Signed-off-by: Davi-dev1 <davigancalveesdasilva@gmail.com>

--- a/Gui IA/templates/index.html
+++ b/Gui IA/templates/index.html
@@ -12,7 +12,10 @@
   
   <div class="botao_login"> 
   <a href ="{{ url_for('Login') }}">Login</div></a>
-
+  
+    <div class="chat">
+  <a href="{{ url_for('ajuda_guiia') }}">
+    Chat Ajuda </div></a>
 
     <header>
 
@@ -53,6 +56,8 @@
     color:black;
     cursor: pointer;
 }
+
+
 
 </style>
 
